--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,6 @@ body {
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
-  background-color: #f2f2f2;
+  background-color: #faa701;
   user-select: nonet;
 }
